# GifMaker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SCRATCHPAD.md  SUMMARY.md  ai_suggestions.md  gif_maker.py  install.bat  launch.bat  pyproject.toml  requirements.txt
DOCS/: ARCHITECTURE.md  SBOM.md  SCRATCHPAD.md  STYLE_GUIDE.md  SUMMARY.md
gif_maker/: __init__.py  __main__.py  main.py
gif_maker/core/: __init__.py  constants.py  gif_creator.py  quality_engine.py
gif_maker/gui/: __init__.py  main_window.py
gif_maker/utils/: __init__.py  image_utils.py
tests/: __init__.py  test_settings_logic.py
